deploy/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
  labels:
    app.kubernetes.io/instance: transmission
    app.kubernetes.io/name: transmission
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: transmission
      app.kubernetes.io/name: transmission
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: transmission
        app.kubernetes.io/name: transmission
    spec:
      hostname: transmission
      containers:
      - name: transmission
        image: linuxserver/transmission:2021.11.18
        resources:
          requests:
            cpu: 50m
            memory: 300Mi
          limits:
            cpu: 400m
            memory: 500Mi
        volumeMounts:
        - name: downloads
          mountPath: /downloads
        - name: config
          mountPath: /config
        ports:
        - containerPort: 9091
          name: web
          protocol: TCP
        - containerPort: 51413
          name: data-tcp
          protocol: TCP
        - containerPort: 51413
          name: data-udp
          protocol: UDP
        livenessProbe:
          httpGet:
            path: /
            port: web
          initialDelaySeconds: 60
          failureThreshold: 3
          periodSeconds: 60
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: web
          initialDelaySeconds: 60
          failureThreshold: 3
          periodSeconds: 60
          timeoutSeconds: 10
      volumes:
      - name: downloads
        persistentVolumeClaim:
          claimName: plex-media
      - name: config
        persistentVolumeClaim:
          claimName: transmission-config
