deploy/Service.yaml
kind: Service
apiVersion: v1
metadata:
  name: transmission
  labels:
    app.kubernetes.io/instance: transmission
    app.kubernetes.io/name: transmission
spec:
  ports:
  - name: web
    port: 9091
    targetPort: web
    protocol: TCP
  - name: data-tcp
    port: 51413
    targetPort: data-tcp
    protocol: TCP
  - name: data-udp
    port: 51413
    targetPort: data-udp
    protocol: UDP
  selector:
    app.kubernetes.io/instance: transmission
    app.kubernetes.io/name: transmission
